improve BigDecimal benchmark